Extrai lógica auxiliar da geração de código para a nova classe `CodeGeneratorHelper` e ajusta `CrudGenerator`, `CodeGenerator`, e testes para usá-la. Adiciona `Random` para valores `serialVersionUID`.